2016-01-16  SilverNexus
	* ErrorLog.c: Refactor logging to use vfprintf instead of vsnprintf.
	  Error logging no longer uses a fixed-size buffer to write errors.

2016-01-12  SilverNexus
	* Makefile.am: Add -Wall and -Wextra to the CFLAGS.
	* search.c: Add const qualifiers to some variables and pointers.
	  Fixed incorrect check for fd load failure when mmap'ing files.
	  Utilized ftwbuf->base for faster checks of excluded directories.

2016-01-11  SilverNexus
	* search.c: Refactored stdio search to behave more like mmaped search.
	  Also utilized inode stat information in nftw(3) when parsing files.
	  Refactored all stat calls to be outside parse_file, and check file size before entering parse_file.
	* search.h: Consolidated preprocessor conditionals rendered obsolete by reading files
	  into memory when using stdio.
	  Removed unneeded include for stdio.h.
	* settings.h: Preprocessor conditional cleanup from a more uniform search backend.
	* result_list.c: Change add_result() to be void.
	* result_list.h: Alter declaration to match add_result() definition.

2016-01-10  SilverNexus
	* search.c: Refactored search code to reduce duplication of code.
	* search.h: Add decarations for new functions from the refactor.
	* parseArgs.c: Alter the single-match flags to assign to the new search functions.
	* settings.h: Alter the function pointer to the search function to match the new parameter list.
	* settings.c: Changed default search function to be refactored version.

2015-12-23  SilverNexus
	* output.c: Reduce severity of failed load of output file. If it fails, print to stdout.
	  Then shortened the file output phrase to reduce output size.
	  Alter check for stdout printing to match new design.
	* settings.c: Change default behavior to print to stdout.
	  Make case insensitive searches only exist if strcasestr does.
	* parseArgs.c: Retired -O and --stdout flags. Replaced by default behavior.
	  Only parse -n and --no-case if strcasestr exists.